---
source: crates/plotnik-compiler/src/parser/tests/grammar/sequences_tests.rs
---
Q = {}
---
error: empty `{}` matches nothing
  |
1 | Q = {}
  |     ^^
  |
help: sequences must contain at least one expression
